change get cinema
