# src/routes/Cinema.js
@@ -3,17 +3,27 @@ var express = require('express');
 var router = express.Router();
 
 router.get('/', async (req, res) => {
-    let  provinceId = req.query.provinceId;
+    let provinceId = req.query.provinceId;
+    let cinemaId = req.query.cinemaId;
 
     if (provinceId) {
         let cinemas = await CinemaService.GetByProvinceId(provinceId);
         res.status(200),
         res.send(cinemas);
+        return;
+    }
+
+    if (cinemaId) {
+        let cinemas = await CinemaService.GetById(cinemaId);
+        res.status(200),
+        res.send(cinemas);
+        return;
     }
 
     let cinemas = await CinemaService.GetAll();
     res.status(200);
     res.send(cinemas);
+    return;
 });
 
 router.get('/:cinemaId', async (req, res) => {
@@ -23,7 +33,7 @@ router.get('/:cinemaId', async (req, res) => {
 })
 
 router.post('/', async (req, res) => {
-    console.log(req.body);
+    console.log(req.body.Name);
     res.status(200);
     res.send();
 });
